tests/NormalTests/paczka1/small_fuzzy/40167453.err
Error in line 1: DnR A600 34,5
Error in line 2: DnR S61 65,1
Error in line 7: k33XpA1snY S61 9,2
